2006-04-27  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that GSSAPI builds under HP-UX.

2006-04-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Move GNU function attribute protection from src/cvs.h.
	(Report from Mark D. Baushke <mdb@gnu.org>.)

	* maint-aux/gnulib-filelist.txt: Updated by gnulib-update.

	* maint-aux/gnulib-update: Do cleanup on CTRL-C.

2006-04-12  Derek Price  <derek@ximbiot.com>

	* m4/error.m4, m4/time_r.m4: Update from GNULIB.

2006-01-20  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-18  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

	* configure.in: Define $DEFAULT_VERIFY_TEMPLATE for Makefiles.

2006-01-13  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-11  Derek Price  <derek@ximbiot.com>

	* configure.in: Define DEFAULT_VERIFY_TEMPLATE as documented.

	* GPG-TODO: Note progress.

2006-01-10  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-04  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-03  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-01  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2005-12-31  Derek Price  <derek@ximbiot.com>

	* configure.in: Define DEFAULT_VERIFY_TEMPLATE.

2005-12-30  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2005-12-27  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2005-11-10  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2005-11-07  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Keep up to date.  Mark EOL delay unneeded due to GPG
	--textmode option.

2005-10-28  Derek Price  <derek@ximbiot.com>

	* configure.in: Verify that `$GPG --version' works.  Print a warning
	when it doesn't.

2005-10-27  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Update status.

2005-10-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Define DEFAULT_SIGN_TEMPLATE & DEFAULT_SIGN_TEXTMODE