@@ -1,3 +1,7 @@
+2006-05-08  Derek Price  <derek@ximbiot.com>
+
+	* configure.in: s/%a/%@/ & s/%t/%M/ for sign/verify templates.
+
 2006-04-27  Derek Price  <derek@ximbiot.com>
 
 	* NEWS: Note that GSSAPI builds under HP-UX.
